--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "description": "guayablock-site",
   "author": "dotKntrell <jeshuakrc@gmail.com>",
   "keywords": [
-    "gatsby", "React", "Minecraft", "server", "static", "GuayaBlock"
+    "gatsby",
+    "React",
+    "Minecraft",
+    "server",
+    "static",
+    "GuayaBlock"
   ],
   "scripts": {
     "develop": "gatsby develop",
@@ -16,8 +21,12 @@
   },
   "dependencies": {
     "gatsby": "^4.24.4",
+    "gatsby-plugin-image": "^2.24.0",
+    "gatsby-plugin-layout": "^3.24.0",
+    "gatsby-plugin-sharp": "^4.24.0",
     "gatsby-source-filesystem": "^4.24.0",
     "gatsby-transformer-remark": "^5.24.0",
+    "gatsby-transformer-sharp": "^4.24.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   }
