--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-transformer-remark": "^5.24.0",
     "gatsby-transformer-sharp": "^4.24.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "rehype-react": "^7.1.1"
   }
 }
