--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "gatsby": "^4.24.4",
+    "gatsby-cli": "^5.0.0",
     "gatsby-plugin-image": "^2.24.0",
     "gatsby-plugin-layout": "^3.24.0",
     "gatsby-plugin-react-svg": "^3.1.0",
